更改图片选择控件
更改图片选择控件

--- a/ImageSelect/src/main/res/values/strings.xml
+++ b/ImageSelect/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     
     
     <string name="imageselect_image_text">图片</string>
+    <string name="imageselect_clean_images">清除</string>
     <string name="imageselect_complete_text">完成</string>
     <string name="imageselect_count_text">%1$d&#047;%2$d</string>
     <string name="imageselect_dialog_title">提示</string>
