--- a/ImageSelect/src/main/res/values/strings.xml
+++ b/ImageSelect/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="msg_no_creata_cache_flie">无法创建缓存文件，请检查应用权限</string>
     <string name="msg_amount_limit">选择图片数量超过最大限制</string>
     <string name="msg_anount_phone_limit">已经达到最高选择数量，此时不能使用相机、请勾选掉一张图片，再继续操作。</string>
-    
-    
+    <string name="msg_warning_tips_title">提示：</string>
+
     <string name="imageselect_image_text">图片</string>
     <string name="imageselect_clean_images">清除</string>
     <string name="imageselect_complete_text">完成</string>
@@ -18,5 +18,7 @@
     <string name="imageselect_dialog_submit">确定</string>
     <string name="imageselect_dialog_cancel">取消</string>
     <string name="imageselect_mulitselect_complate">完成</string>
+
+
 
 </resources>
